2011-05-12 NiteHogg <keith.b.elliott [at] gmail [dot] com>

	* Initial release :
	Packaging of the XTA Spring RTS mod.