@@ -1,25 +1,21 @@
 # Maintainer: grimi <grimi at poczta dot fm>
 
 pkgname=mediterraneannight-theme
-pkgver=2.02
-pkgrel=5
+pkgver=2.03
+pkgrel=2
 pkgdesc="A gtk3, gtk2, metacity, xfwm4 and unity theme (variation of 'Adwaita cupertino')."
 arch=('any')
 url="http://gnome-look.org/content/show.php/MediterraneanNight+Series?content=156782"
 license=('GPL')
-depends=('gtk-engines' 'gtk-engine-murrine' 'gtk-engine-unico')
+depends=('gtk-engines' 'gtk-engine-murrine' 'gtk3')
 source=("https://dl.dropboxusercontent.com/u/80497678/MediterraneanNight-${pkgver}.tar.gz")
-md5sums=('387107474fb56f0c6fcde5dfa7d5140b')
+md5sums=('ec0735f053bff9f4502ec951114009fc')
 
 
 package() {
   # delete custom buttons for metacity and unity
   rm Mediterranean*/*.tar.gz
-
-  # fix for: covering wallpaper by nautilus if it handle desktop
-  for i in $(find Mediterranean*/ -type f -name nautilus36.css); do
-    echo -e 'NautilusDesktopWindow GtkWidget {\n\tbackground-color: @transparent;\n}' >> "$i"
-  done
+  rm -rf MediterraneanNight/TitleBar-Buttons
 
   find Mediterranean*/ -type f -exec install -Dm644 "{}" "$pkgdir/usr/share/themes/{}" \;
 }
