@@ -1,7 +1,7 @@
 # Maintainer: Sander Boom <sander at inflowmotion dot nl>
 
 pkgname=sublime-text-nightly
-pkgver=3.3041
+pkgver=3.3043
 pkgrel=1
 pkgdesc="Sophisticated text editor for code, html and prose - nightly build (available to registered users only)"
 arch=('i686' 'x86_64')
@@ -18,10 +18,10 @@ source=(
   "http://c758482.r82.cf2.rackcdn.com/sublime_text_3_build_${pkgver:2}_${_archurl}.tar.bz2"
   "sublime_text_3.desktop"
 )
-md5sums=('b8c7f53e7199982b9122c34cc93e663e'
+md5sums=('3a44cd514fd44d03b65cbbcf55fb1963'
          '3843bb9bba00e7817e3194ed99d2ff26')
 
-[[ "${CARCH}" = i686 ]] && md5sums[0]='83d99bc44c6c39f76139e1c2640d7e15'
+[[ "${CARCH}" = i686 ]] && md5sums[0]='fefc1393bcbe45bbb73e00aeccb87c6f'
 
 package() {
   cd "${srcdir}"
