@@ -2,3 +2,13 @@
 
 	* Initial release :
 	Packaging of the XTA Spring RTS mod.
+2013-06-21 NiteHogg <keith.b.elliott [at] gmail [dot] com>
+
+        * XTA 9728
+        Routine package update.
+
+2013-06-21 NiteHogg <keith.b.elliott [at] gmail [dot] com>
+
+        * XTA 9728
+        Routine package update.
+
